coomit after tbalbiz

--- a/src/main/webapp/app/entities/depart/detail/depart-detail.component.html
+++ b/src/main/webapp/app/entities/depart/detail/depart-detail.component.html
@@ -108,7 +108,7 @@
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.motifa">Motifa</span></dt>
         <dd>
-          <span>{{ depart.motifa }}</span>
+          <span>{{ depart.motif_a }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.observ">Observ</span></dt>
         <dd>
