--- a/src/main/webapp/app/entities/deprotat/detail/deprotat-detail.component.html
+++ b/src/main/webapp/app/entities/deprotat/detail/deprotat-detail.component.html
@@ -96,7 +96,7 @@
         </dd>
         <dt><span jhiTranslate="departdbApp.deprotat.rannul">Rannul</span></dt>
         <dd>
-          <span>{{ deprotat.rannul }}</span>
+          <span>{{ deprotat.r_annul }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.deprotat.km">Km</span></dt>
         <dd>
@@ -104,7 +104,7 @@
         </dd>
         <dt><span jhiTranslate="departdbApp.deprotat.motifa">Motifa</span></dt>
         <dd>
-          <span>{{ deprotat.motifa }}</span>
+          <span>{{ deprotat.motif_a }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.deprotat.observ">Observ</span></dt>
         <dd>
@@ -144,7 +144,7 @@
         </dd>
         <dt><span jhiTranslate="departdbApp.deprotat.idapex">Idapex</span></dt>
         <dd>
-          <span>{{ deprotat.idapex }}</span>
+          <span>{{ deprotat.id_apex }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.deprotat.plusmoins">Plusmoins</span></dt>
         <dd>
