--- a/src/main/webapp/app/entities/deprotat/update/deprotat-update.component.html
+++ b/src/main/webapp/app/entities/deprotat/update/deprotat-update.component.html
@@ -382,7 +382,7 @@
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="departdbApp.deprotat.depart" for="field_depart">Depart</label>
           <select
-            class="form-control"
+            class="form-select"
             id="field_depart"
             data-cy="depart"
             name="depart"
